[package]
name = "twa-jwks"
version = "1.2.13"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Library to validate JWT tokens using JSON Web Key Set (JWKS)"
repository = "https://github.com/timayz/twa-jwks"
homepage = "https://docs.rs/twa-jwks"
documentation = "https://docs.rs/twa-jwks"
keywords = ["actix-web", "axum", "jwks"]

[dependencies]
actix-web = { version = "4.5.1", optional = true }
axum = { version = "0.7.4", optional = true }
futures-util = { version = "0.3.30", optional = true }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
thiserror = "1.0.57"
tracing = "0.1.40"
base64 = "0.21.7"
ureq = { version = "2.9.5", features = ["json"] }
regex = "1.10.3"
ring = "0.17.7"
tokio = { version = "1.36.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.3"

[features]
default = []
actix-web = ["dep:actix-web", "dep:futures-util"]
axum = ["dep:axum"]
