[package]
name = "twa-jwks"
version = "1.2.15"
edition = "2021"
license = "Apache-2.0"
publish = true
description = "Library to validate JWT tokens using JSON Web Key Set (JWKS)"
repository = "https://github.com/timayz/twa-jwks"
homepage = "https://docs.rs/twa-jwks"
documentation = "https://docs.rs/twa-jwks"
keywords = ["actix-web", "axum", "jwks"]

[dependencies]
actix-web = { version = "4.5.1", optional = true }
axum = { version = "0.7.5", optional = true }
futures-util = { version = "0.3.30", optional = true }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
tracing = "0.1.40"
base64 = "0.22.0"
ureq = { version = "2.9.6", features = ["json"] }
regex = "1.10.4"
ring = "0.17.8"
tokio = { version = "1.37.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-test = "0.4.4"

[features]
default = []
actix-web = ["dep:actix-web", "dep:futures-util"]
axum = ["dep:axum"]
