[package]
name = "twa-actix-web"
version = "1.2.12"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
twa-jwks = { path = "../../twa-jwks", version = "1.2.12", features = ["actix-web"] }
actix-web = { version = "4.4.1", features = ["macros"] }
serde = { version = "1.0.196", features = ["derive"] }
