[package]
name = "twa-actix-web"
version = "1.2.15"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
twa-jwks = { path = "../../twa-jwks", version = "1.2.15", features = ["actix-web"] }
actix-web = { version = "4.5.1", features = ["macros"] }
serde = { version = "1.0.197", features = ["derive"] }
