[package]
name = "twa-actix-web"
version = "1.2.17"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
twa-jwks = { path = "../../twa-jwks", version = "1.2.17", features = ["actix-web"] }
actix-web = { version = "4.5.1", features = ["macros"] }
serde = { version = "1.0.199", features = ["derive"] }
