[package]
name = "twa-axum"
version = "1.2.15"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
twa-jwks = { path = "../../twa-jwks", version = "1.2.15", features = ["axum"] }
axum = { version = "0.7.4", features = ["macros"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
