[package]
name = "twa-axum"
version = "1.2.17"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
twa-jwks = { path = "../../twa-jwks", version = "1.2.17", features = ["axum"] }
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.199", features = ["derive"] }
